# hcm-aic

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AIC_2025_dataset_download_link.csv
docs/source/: README.md
notebooks/: build_full_release.ipynb  ingest_beit3.ipynb  ingest_chunkformer.ipynb  ingest_ocr.ipynb
src/aic/: app.py  asr.py  beit3.py  build.py  cli.py  ocr.py  query.py  search.py
