[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "faiss-cpu",
  "numpy",
  "open-clip-torch",
  "pillow",
  "torch",
]

[project.optional-dependencies]
beit3 = [
  "sentencepiece",
  "setuptools<81",
  "timm",
  "tensorboardX",
  "torchmetrics==0.7.3",
  "torchscale",
  "transformers<5",
]
asr = ["chunkformer", "numba>=0.59"]
query = ["google-genai", "pydantic", "python-dotenv"]
app = ["gradio"]

[project.scripts]
aic = "aic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
