[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "chunkformer",
  "faiss-cpu",
  "google-genai",
  "gradio",
  "numba>=0.59",
  "numpy",
  "open-clip-torch",
  "paddleocr",
  "paddlepaddle",
  "pillow",
  "pydantic",
  "pytesseract",
  "python-dotenv",
  "sentencepiece",
  "setuptools<81",
  "tensorboardX",
  "timm",
  "torch",
  "torchmetrics==0.7.3",
  "torchscale",
  "transformers<5",
]

[project.scripts]
aic = "aic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
